[REV] Add service check info
