# pkg/api/apiRouters/version2/v2Routers.go
@@ -64,6 +64,7 @@ func (v2 *V2) tenantNameRouter() chi.Router {
 	//代码检测
 	r.Post("/code-check", controller.GetManager().CheckCode)
 	r.Post("/servicecheck", controller.Check)
+	r.Get("/servicecheck/{uuid}", controller.GetServiceCheckInfo)
 	r.Post("/cloud-share", controller.GetManager().ShareCloud)
 	r.Get("/resources", controller.GetManager().SingleTenantResources)
 	r.Get("/certificates", controller.GetManager().Entrance)
