# pkg/api/handler/ServiceHandler.go
@@ -21,6 +21,7 @@ package handler
 import (
 	"github.com/goodrain/rainbond/cmd/api/option"
 	api_model "github.com/goodrain/rainbond/pkg/api/model"
+	"github.com/goodrain/rainbond/pkg/builder/parser"
 	"github.com/goodrain/rainbond/pkg/api/util"
 	dbmodel "github.com/goodrain/rainbond/pkg/db/model"
 	"github.com/goodrain/rainbond/pkg/worker/discover/model"
@@ -69,6 +70,7 @@ type ServiceHandler interface {
 	UpdateVersionEnv(uve *api_model.SetVersionEnv) *util.APIHandleError
 	DeleteComplexEnvs(tenantID, serviceAlias, pluginID string) *util.APIHandleError
 	ServiceCheck(*api_model.ServiceCheckStruct) (string, string, *util.APIHandleError)
+	GetServiceCheckInfo(uuid string)([]parser.ServiceInfo, *util.APIHandleError)
 }
 
 var defaultServieHandler ServiceHandler
