# pkg/api/handler/serviceCheck.go
@@ -21,10 +21,12 @@ package handler
 import (
 	"context"
 	"time"
+	"fmt"
 
 	"github.com/pquerna/ffjson/ffjson"
 
 	"github.com/Sirupsen/logrus"
+	"github.com/goodrain/rainbond/pkg/builder/parser"
 	api_db "github.com/goodrain/rainbond/pkg/api/db"
 	api_model "github.com/goodrain/rainbond/pkg/api/model"
 	tutil "github.com/goodrain/rainbond/pkg/util"
@@ -62,4 +64,25 @@ func (s *ServiceAction) ServiceCheck(scs *api_model.ServiceCheckStruct) (string,
 		return "", "", util.CreateAPIHandleError(500, err)
 	}
 	return checkUUID, scs.Body.EventID, nil
+}
+
+//GetServiceCheckInfo 获取应用源检测信息
+func (s *ServiceAction) GetServiceCheckInfo(uuid string)([]parser.ServiceInfo, *util.APIHandleError) {
+	k := fmt.Sprintf("/servicecheck/%s", uuid)
+	var si []parser.ServiceInfo
+	ctx, cancel := context.WithTimeout(context.Background(), 10 * time.Second)
+	resp, err := s.EtcdCli.Get(ctx, k)
+	cancel()
+	if err != nil {
+		logrus.Errorf("get etcd k %s error, %v", k, err)
+		return nil, util.CreateAPIHandleError(500, err)
+	}
+	if resp.Count == 0 {
+		return si, nil
+	}
+	v := resp.Kvs[0].Value
+	if err := ffjson.Unmarshal(v, &si); err != nil {
+		return nil, util.CreateAPIHandleError(500, err)
+	}
+	return si, nil	
 }
